# controllers/reservationController.js
@@ -130,11 +130,11 @@ export async function getReservation(req, res) {
     console.log("GET /reservation is requested");
     try {
         const result = await database.query({
-            text: `SELECT rs."bookId" ,rs."roomId" , rt."roomName" , rooms."floor" , rooms."roomSize" , rs."checkInDate" , rs."checkOutDate" , rs."totalDay" , rs."totalPrice" FROM reservations rs 
+            text: `SELECT rs."bookId" ,rs."roomId" , rt."roomName" , rooms."floor" , rooms."roomSize" , rs."checkInDate" , rs."checkOutDate" , rs."totalDay" , rs."totalPrice" , rs."roomStatus" FROM reservations rs 
                 LEFT JOIN carts ct ON rs."bookId" = ct."bookId"
                 LEFT JOIN rooms ON rs."roomId" = rooms."roomId"
                 LEFT JOIN "roomTypes" rt ON rooms."roomType" = rt."roomType"
-                WHERE ct."username" = $1 ORDER BY rs."bookId" DESC`,
+                WHERE ct."username" = $1 ORDER BY rs."bookId" DESC `,
             values: [req.params.username],
         });
         
