# service/swagger.yaml
@@ -181,7 +181,7 @@ paths:
 # Review
   /review:
     get:
-      tags: [Review with Admin Role]
+      tags: [Review with Admin&User Role]
       summary: Get review
       responses:
         '200':
@@ -278,19 +278,6 @@ paths:
           description: Bad Request
         '404':
           description: Not Found
-        '500':
-          description: Internal Server Error
-
-# Room
-  /allRoom:
-    get:
-      tags: [All Room]
-      summary: Get all rooms
-      responses:
-        '200':
-          description: OK
-        '400':
-          description: Bad Request
         '500':
           description: Internal Server Error
 
@@ -423,6 +410,30 @@ paths:
   /rooms:
     post:
       tags: [Room with User Role]
+      summary: Get rooms By Search
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              properties:
+                roomName:
+                  type: string
+                roomSize:
+                  type: number
+                floor:
+                  type: number
+              
+      responses:
+        '200':
+          description: OK
+        '400':
+          description: Bad Request
+        '500':
+          description: Internal Server Error
+  /allRoom:
+    get:
+      tags: [Room with User Role]
       summary: Get all rooms
       responses:
         '200':
@@ -431,7 +442,6 @@ paths:
           description: Bad Request
         '500':
           description: Internal Server Error
-
 
 
 components:
